Added colouring and button spacing

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
             </div>
             <div id="Calc__Bot">
                 <div id="Calc__Bot__All">
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">AC</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">&#177</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">%</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">&#247</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">7</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">8</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">9</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">&#215</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">4</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">5</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">6</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">&#8722</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">1</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">2</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">3</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">&#43</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">0</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons">.</button>
-                    <button class="Calc__Bot__All__DoubleButtonShape Calc__All_Buttons">&#61</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton1">AC</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton2">&#177</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton3">%</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton4">&#247</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton5">7</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton6">8</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton7">9</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton8">&#215</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton9">4</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton10">5</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton11">6</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton12">&#8722</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton13">1</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton14">2</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton15">3</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton16">&#43</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton17">0</button>
+                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton18">.</button>
+                    <button class="Calc__Bot__All__DoubleButtonShape Calc__All_Buttons" id="CalcButton19">&#61</button>
                 </div>
             </div>
         </div>
