--- a/index.html
+++ b/index.html
@@ -16,37 +16,41 @@
     <header></header>
 
     <main>
+        <div>
+            <h1>Calculator</h1>
+        </div>
         <div id="Calc">
+            <div id="Calc__LightDarkModeButtons">
+                <button class="Calc__LightDarkModeButtons__Modes"><img src="./Media/Images/moonsvg.svg" alt=""></button>
+                <button class="Calc__LightDarkModeButtons__Modes"><img src="./Media/Images/sunsvg.svg" alt=""></button>
+            </div>
             <div id="Calc__Top">
                 <div>
-                    <div id="Calc__Top__LightDarkModeButtons">
-                        <button id="Calc__Top__LightDarkModeButtons__LightMode"></button>
-                        <button id="Calc__Top__LightDarkModeButtons__DarkMode"></button>
-                        <input id="Calc__Top__Input" type="text" />
-                    </div>
+                    <input id="Calc__Top__Input" type="text" />
                 </div>
             </div>
             <div id="Calc__Bot">
                 <div id="Calc__Bot__All">
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton1">AC</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton2">&#177</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton3">%</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton4">&#247</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton5">7</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton6">8</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton7">9</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton8">&#215</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton9">4</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton10">5</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton11">6</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton12">&#8722</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton13">1</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton14">2</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton15">3</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton16">&#43</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton17">0</button>
-                    <button class="Calc__Bot__All__ButtonShape Calc__All_Buttons" id="CalcButton18">.</button>
-                    <button class="Calc__Bot__All__DoubleButtonShape Calc__All_Buttons" id="CalcButton19">&#61</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">AC</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#177</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">%</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#247</button>
+                    <button class="Calc__All__Buttons">7</button>
+                    <button class="Calc__All__Buttons">8</button>
+                    <button class="Calc__All__Buttons">9</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#215</button>
+                    <button class="Calc__All__Buttons">4</button>
+                    <button class="Calc__All__Buttons">5</button>
+                    <button class="Calc__All__Buttons">6</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#8722</button>
+                    <button class="Calc__All__Buttons">1</button>
+                    <button class="Calc__All__Buttons">2</button>
+                    <button class="Calc__All__Buttons">3</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#43</button>
+                    <button class="Calc__All__Buttons">.</button>
+                    <button class="Calc__All__Buttons">0</button>
+                    <button class="Calc__All__Buttons">.</button>
+                    <button class="Calc__All__Buttons Calc__All__Icons">&#61</button>
                 </div>
             </div>
         </div>
