Various sizing adjustments to all0w for responsiveness

--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
     <header></header>
 
     <main>
-        <div>
-            <h1>Calculator</h1>
-        </div>
         <div id="Calc">
-            <div id="Calc__LightDarkModeButtons">
+            <!-- <div id="Calc__LightDarkModeButtons">
                 <button class="Calc__LightDarkModeButtons__Modes"><img src="./Media/Images/moonsvg.svg" alt=""></button>
                 <button class="Calc__LightDarkModeButtons__Modes"><img src="./Media/Images/sunsvg.svg" alt=""></button>
-            </div>
+            </div> -->
             <div id="Calc__Top">
                 <div>
                     <input id="Calc__Top__Input" type="text" />
