added basic JS variables via ID's & Classes

--- a/index.html
+++ b/index.html
@@ -28,31 +28,32 @@
             </div>
             <div id="Calc__Bot">
                 <div id="Calc__Bot__All">
-                    <button class="Calc__All__Buttons Calc__All__Icons">AC</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#177</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">%</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#247</button>
-                    <button class="Calc__All__Buttons">7</button>
-                    <button class="Calc__All__Buttons">8</button>
-                    <button class="Calc__All__Buttons">9</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#215</button>
-                    <button class="Calc__All__Buttons">4</button>
-                    <button class="Calc__All__Buttons">5</button>
-                    <button class="Calc__All__Buttons">6</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#8722</button>
-                    <button class="Calc__All__Buttons">1</button>
-                    <button class="Calc__All__Buttons">2</button>
-                    <button class="Calc__All__Buttons">3</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#43</button>
-                    <button class="Calc__All__Buttons">.</button>
-                    <button class="Calc__All__Buttons">0</button>
-                    <button class="Calc__All__Buttons">.</button>
-                    <button class="Calc__All__Buttons Calc__All__Icons">&#61</button>
+                    <button id="acButton" class="Calc__All__Buttons Calc__All__Icons">AC</button>
+                    <button id="plusMinusButton" class="Calc__All__Buttons Calc__All__Icons">&#177</button>
+                    <button id="percentButton" class="Calc__All__Buttons Calc__All__Icons">%</button>
+                    <button id="divideButton" class="Calc__All__Buttons Calc__All__Icons">&#247</button>
+                    <button id="sevenButton" class="Calc__All__Buttons">7</button>
+                    <button id="eightButton" class="Calc__All__Buttons">8</button>
+                    <button id="nineButton" class="Calc__All__Buttons">9</button>
+                    <button id="multiplyButton" class="Calc__All__Buttons Calc__All__Icons">&#215</button>
+                    <button id="fourButton" class="Calc__All__Buttons">4</button>
+                    <button id="fiveButton" class="Calc__All__Buttons">5</button>
+                    <button id="sixButton" class="Calc__All__Buttons">6</button>
+                    <button id="minusButton" class="Calc__All__Buttons Calc__All__Icons">&#8722</button>
+                    <button id="oneButton" class="Calc__All__Buttons">1</button>
+                    <button id="twoButton" class="Calc__All__Buttons">2</button>
+                    <button id="threeButton" class="Calc__All__Buttons">3</button>
+                    <button id="plusButton" class="Calc__All__Buttons Calc__All__Icons">&#43</button>
+                    <button id="" class="Calc__All__Buttons"></button>
+                    <button id="zeroButton" class="Calc__All__Buttons">0</button>
+                    <button id="dotButton" class="Calc__All__Buttons">.</button>
+                    <button id="equalsButton" class="Calc__All__Buttons Calc__All__Icons">&#61</button>
                 </div>
             </div>
         </div>
     </main>
 
     <footer></footer>
+    <script src="./app.js"></script>
   </body>
 </html>
