--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </div> -->
             <div id="Calc__Top">
                 <div>
+                    <div>
+                      <p id="Calc__History"></p>
+                    </div>
                     <input id="Calc__Top__Input" type="text" />
                 </div>
             </div>
@@ -44,7 +47,7 @@
                     <button id="twoButton" class="Calc__All__Buttons">2</button>
                     <button id="threeButton" class="Calc__All__Buttons">3</button>
                     <button id="plusButton" class="Calc__All__Buttons Calc__All__Icons">&#43</button>
-                    <button id="" class="Calc__All__Buttons"></button>
+                    <button id="backButton" class="Calc__All__Buttons Calc__All__Icons">←</button>
                     <button id="zeroButton" class="Calc__All__Buttons">0</button>
                     <button id="dotButton" class="Calc__All__Buttons">.</button>
                     <button id="equalsButton" class="Calc__All__Buttons Calc__All__Icons">&#61</button>
